--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  font-family: 'Roboto', 'Raleway', sans-serif;
-  color: #2e2f42;
+  font-family: 'Roboto', sans-serif;
+  background-color: #ffffff;
+  color: #434455;
 }
 ul {
   list-style-type: none;
@@ -11,6 +12,8 @@ a {
 /* #region header */
 .heder {
 }
+.heder-nav {
+}
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -20,11 +23,10 @@ a {
   text-transform: uppercase;
   color: #4d5ae5;
 }
-.logo-span {
+.header-logo .logo-span {
   color: #2e2f42;
 }
-.nav {
-}
+
 .meny {
 }
 .meny-item {
@@ -42,6 +44,7 @@ a {
   color: #404bbf;
 }
 .address {
+  font-style: normal;
 }
 .contact {
 }
@@ -72,6 +75,7 @@ a {
   color: #fff;
 }
 .btn {
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -110,6 +114,7 @@ a {
 /* #endregion Advantages  */
 /* #region our_team */
 .team {
+  background-color: #f4f4fd;
 }
 .team-title {
   font-weight: 700;
@@ -117,11 +122,13 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 .team-list {
 }
 .team-item {
+  background-color: #ffffff;
 }
 .team-photo {
   background: url('path_to_image');
@@ -149,6 +156,7 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 .portfolio-list {
@@ -176,7 +184,7 @@ a {
   background-color: #2e2f42;
 }
 
-.footer-span {
+.footer-logo .logo-span {
   color: #f4f4fd;
 }
 .footer-text {
