--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,51 @@ body {
 }
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
 }
-/* #region header */
-.heder {
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
-.heder-nav {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+}
+/* #region header */
+.section-heeder {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -26,12 +63,21 @@ a {
 .header-logo .logo-span {
   color: #2e2f42;
 }
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
 
 .meny {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 .meny-item {
 }
 .meny-link {
+  padding: 24px 0;
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -45,12 +91,19 @@ a {
 }
 .address {
   font-style: normal;
+  margin-left: auto;
 }
 .contact {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 .contact-item {
 }
 .contact-link {
+  display: block;
+  padding: 24px 0;
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -63,8 +116,10 @@ a {
 }
 /* #endregion header */
 /* #region hiro */
-.hero {
+.section-hero {
   background-color: #2e2f42;
+  padding-top: 168px;
+  padding-bottom: 292px;
 }
 .hero-title {
   font-weight: 700;
@@ -73,6 +128,10 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 498px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
 }
 .btn {
   font-family: 'Roboto', sans-serif;
@@ -83,6 +142,13 @@ a {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  border-radius: 4px;
+  width: 169px;
+  min-height: 56px;
+  padding: 16px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 .btn:hover,
 .btn:focus {
@@ -90,22 +156,31 @@ a {
 }
 /* #endregion hiro */
 /* #region advantages  */
-.advantages {
+.section-advantages {
+  padding-top: 85px;
+  padding-bottom: 68px;
 }
+
 .advantages-title {
 }
+
 .advantages-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
 }
-.advantages-item {
+.advantages-list-item {
+  width: calc((100% - 72px) / 4);
 }
-.item-title {
+.item-list-title {
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.item-text {
+.item-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -113,10 +188,16 @@ a {
 }
 /* #endregion Advantages  */
 /* #region our_team */
-.team {
+.section-team {
   background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  margin-top: 68px;
+  margin-bottom: 172px;
 }
 .team-title {
+  min-width: 162px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -126,14 +207,26 @@ a {
   color: #2e2f42;
 }
 .team-list {
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 .team-item {
   background-color: #ffffff;
 }
 .team-photo {
   background: url('path_to_image');
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border-radius: 0 0 4px 4px;
+}
+.container-team-text {
+  margin: 32px 16px;
 }
 .team-item-title {
+  text-align: center;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -141,6 +234,7 @@ a {
   color: #2e2f42;
 }
 .team-text {
+  text-align: center;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -148,9 +242,11 @@ a {
 }
 /* #endregion our_team */
 /* #region portfolio */
-.portfolio {
+.section-portfolio {
+  margin-bottom: 120px;
 }
 .portfolio-title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -160,10 +256,19 @@ a {
   color: #2e2f42;
 }
 .portfolio-list {
+  display: flex;
+  gap: 48px 24px;
+  flex-wrap: wrap;
 }
 .portfolio-item {
 }
 .portfolio-photo {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.container-portfolio-text {
+  padding: 32px 16px;
 }
 .portfolio-item-title {
   font-weight: 500;
@@ -182,15 +287,22 @@ a {
 /* #region footer */
 .footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.container-footer {
 }
 
 .footer-logo .logo-span {
   color: #f4f4fd;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  width: 264px;
 }
 /* #endregion footer */
